# comp_math

./: .gitignore  Jacobi_method.ipynb  Jacobi_method.py  README.md  matrix_generator.py  unit_tests.py
Cpp/compmath/: CMakeLists.txt  Config.hh.in  Doxyfile  tests.cmake
Cpp/compmath/docs/html/: diff__equations_8hh.html  diff__equations_8hh.js  diff__equations_8hh_source.html  differentiation_8hh.html  differentiation_8hh.js  differentiation_8hh_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  export__data_8hh.html  export__data_8hh.js  export__data_8hh_source.html  files.html  index.html  integration_8hh.html  integration_8hh.js  integration_8hh_source.html  interpolation_8hh.html  interpolation_8hh.js  interpolation_8hh_source.html  namespacecompmath.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  norm_8hh.html  norm_8hh.js  norm_8hh_source.html
Cpp/compmath/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  searchdata.js
Cpp/compmath/docs/latex/: diff__equations_8hh.tex  diff__equations_8hh_source.tex  differentiation_8hh.tex  differentiation_8hh_source.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  export__data_8hh.tex  export__data_8hh_source.tex  files.tex  integration_8hh.tex  integration_8hh_source.tex  interpolation_8hh.tex  interpolation_8hh_source.tex  namespacecompmath.tex  namespaces.tex  norm_8hh.tex  norm_8hh_source.tex  refman.tex
Cpp/compmath/include/: diff_equations.hh  differentiation.hh  export_data.hh  integration.hh  interpolation.hh  norm.hh
Cpp/compmath/src/: export_data.cc
Cpp/compmath/test/: test_app.cc  test_differentiation.cc  test_integration.cc  test_interpolation.cc
Differential Equations/: test.ipynb
Differentiation/ipynb/: test.ipynb
Equations/: eq_test.py  solver.py
Equations/py/: eq_test.py  solver.py  sys_eq_test.py
Integration/: test.ipynb
Interpolation/ipynb/: test.ipynb
Python/2sem/: Lab1.ipynb  Lab2.ipynb  Lab2.py  Lab3.ipynb  Lab4.ipynb  Lab5.ipynb
Python/Differential Equations/: test.ipynb
Python/Equations/ipynb/: test.ipynb
Python/Interpolation/py/: methods.py
Python/Labs_6sem/: labs.ipynb
Python/Plotter/: plot-differentiate.ipynb  plot-integrate.ipynb  plot-interpolate.ipynb  plot.ipynb
SLE/: Jacobi.ipynb  Jacobi.py  Jacobi_method.ipynb  Jacobi_method.py  Seidel.py  fwd_test.py  jacobi_test.py  matGen.py  sys_solver.py  test.py  util.py
SLE/py/: grad_test.py  sys_solver.py  unit_tests.py
